- Created common modules - Fixed angular flex layout issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,8 @@
 .container {
-  display: flex;
-  flex-direction: column;
   height: 100vh;
 }
 
 main {
-  flex: 1;
   overflow: auto;
-  display: flex;
   background: url("assets/images/bg-scribble-light.png");
 }
