--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -1,15 +1,14 @@
-.main {
-  display: flex;
-}
-
 .app-logo {
   max-width: 60px;
 }
 
 .mat-button {
   color: #a4a7ac;
-
   &.active {
     color: #FFFFFF;
   }
+}
+
+.links {
+  padding-left: 20px;
 }
